[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["thorwolpert <thor@wolpert.ca>"]
readme = "README.md"
packages = [{include = "flask_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
