[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["thorwolpert <thor@wolpert.ca>"]
readme = "README.md"
packages = [{include = "flask_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
launchdarkly-server-sdk = "^8.1.1"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
psycopg2 = "^2.9.5"

[tool.poetry.group.test.dependencies]
pexpect = "^4.8.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
